# SemCLIP

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: sugarcrepe_pp_paraphrased.csv
src/: args.py  custom_loss.py  dataset.py  evaluation.py  model.py  train.py  training_params.py
src/semclip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
syn_caption_generation/: syn_caption_generation.ipynb
